updating to main from fix branch

--- a/News/2023-05-09.md
+++ b/News/2023-05-09.md
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Redirecting...</title>
-    <link rel="canonical" href="https://cascadesteam.org/news/whatcom-stem-announces-formation" />
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=https://cascadesteam.org/news/whatcom-stem-announces-formation" />
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
-</html>
+---
+layout: page
+title: Whatcom STEM Announces Formation
+---
+## May 9, 2023: Whatcom STEM Announces Formation
+
+Whatcom STEM is forming as a new 501(c)(3) nonprofit organization.
+
+Whatcom STEM will focus on STEM Education, Career Connected Learning, Digital Literacy, and Digital Equity for all people of all ages. 
+
+Are you passionate about the opportunities and development of Whatcom STEM? We are an open community and welcome your guidance as we prepare to launch.
+
+Please see our proposed [Whatcom STEM Organization Overview](/organization.html) for a better understanding of our purpose, mission, values, and structure. We welcome your input through the [Whatcom STEM Community Survey](http://survey.whatcomstem.org). 
+
+We look forward to building Whatcom STEM with you!
+
+For discussion, please join us at our [Community Hub](http://discord.whatcomstem.org) (Discord) in the #feedback channel. For inquiries please contact [Michael Gan](https://www.linkedin.com/in/michaelbgan) at [michaelbgan@gmail.com](mailto:michaelbgan@gmail.com) or [360-499-2099](tel:13604992099).
