--- a/News/2025-04-01.md
+++ b/News/2025-04-01.md
@@ -1,27 +1,7 @@
 ---
 layout: page
-title: "Cascade STEAM Community Update - April 2025"
-permalink: /news/cascade-steam-community-update-april-2025
+title: Cascade STEAM Community Update - April 2025
 ---
-<style>
-  .header {
-	display: none;
-  }
-  .footer {
-	display: none;
-  }
-</style>
-
-<p align="center"><img src="/assets/images/Cascade_STEAM_horizontal_logo_primary.svg" width="600" height="178" /></p>
-
-<br>
-
-[Home](/) | [Organization](Organization.md) | [Leadership](Leadership.md) | [Partners](Partners.md) | [Get Involved](Get%20Involved/index.md) | [Donate](Donate.md) | [Community Groups](Community%20Groups/index.md) | [Community Projects](Community%20Projects/index.md) | [Mentorship](Mentorship.md)
-
-<br>
-
-# Cascade STEAM Community Update - April 2025
-
 ## Summary
 
 * Cascade STEAM is launched\!  
