--- a/News/2023-10-11.md
+++ b/News/2023-10-11.md
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Redirecting...</title>
-    <link rel="canonical" href="https://cascadesteam.org/news/whatcom-stem-changes-name-to-cascade-steam" />
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=https://cascadesteam.org/news/whatcom-stem-changes-name-to-cascade-steam" />
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
-</html>
+---
+layout: page
+title: Whatcom STEM Changes Name to Cascade STEAM
+---
+## October 11, 2023: Whatcom STEM Changes Name to Cascade STEAM
+We are proud to announce the formation of Cascade STEAM, a new Washington nonprofit and future 501(c)(3) nonprofit organization based in Bellingham, WA.
+
+Founding Board Members include Michael Gan (President), Garth Johnson (Vice President), Joshua Buker (Secretary), and Leslie Brendible (Treasurer).
+
+Our mission: Develop and promote STEAM Education, Career Connected Learning, Digital Literacy, and Digital Equity for all people of all ages.
+
+STEAM is an acronym for the fields of Science, Technology, Engineering, Arts, and Mathematics. STEAM education is a powerful framework to promote curiosity and creativity, encourage a shared learning experience, and build tools to solve important life challenges. We advocate through development and promotion of events, activities, and programs, and invite collaboration with community partners in shared purpose.
+
+While Cascade STEAM is based in Northwest Washington, we openly welcome participation and collaboration without borders. With the inclusion of the “Arts” in STE(A)M, we highlight the importance of design and the cultivation of curiosity as an important addition to STEM.
+
+Cascade STEAM is borne out of the Whatcom STEM program initially organized by Michael Gan in 2020 to bring together education, industry, government, workforce and community to align, support, and promote STEM education in Whatcom County.
+
+Interested to get involved? Volunteer? Have a question? We would love to hear from you! Please contact [Michael Gan](https://www.linkedin.com/in/michaelbgan), Cascade STEAM President, for any inquiries at [michael.gan@cascadesteam.org](mailto:michael.gan@cascadesteam.org) [360-499-2099](tel:3604992099), or via the [Cascade STEAM Community Hub](http://discord.cascadesteam.org) **@Michael Gan**.
