--- a/News/2023-10-11.md
+++ b/News/2023-10-11.md
@@ -3,9 +3,12 @@ layout: page
 title: Whatcom STEM Changes Name to Cascade STEAM
 tags:
   - news
-banner: assets/images/Cascade_STEAM_horizontal_logo_primary.svg
-banner-display: 80%
-banner-fade: -10
+banner: "![[Cascade_STEAM_horizontal_logo_primary.svg]]"
+banner-x: 60
+banner-y: 40
+banner-height: 260
+content-start: 211
+banner-display: auto
 ---
 ## Sumary
 We are proud to announce the formation of Cascade STEAM, a new Washington nonprofit and future 501(c)(3) nonprofit organization based in Bellingham, WA.
