--- a/News/2025-05-10.md
+++ b/News/2025-05-10.md
@@ -3,9 +3,12 @@ layout: page
 title: Cascade STEAM Community Update - May 2025
 tags:
   - news
-banner: assets/images/Cascade_STEAM_horizontal_logo_primary.svg
-banner-display: 80%
-banner-fade: -10
+banner: "![[Cascade_STEAM_horizontal_logo_primary.svg]]"
+banner-x: 60
+banner-y: 40
+banner-height: 260
+content-start: 211
+banner-display: auto
 ---
 ## Summary
 
